--- a/2017-05-02-matplotlib-intro.org
+++ b/2017-05-02-matplotlib-intro.org
@@ -90,6 +90,33 @@ tags: [matplotlib]
 
     [[http://0--key.github.io/assets/img/plt/second_test.png]]
 
+*** Full-fledged dark theme
+    #+BEGIN_SRC python :results file :exports code
+      import numpy as np
+      import matplotlib.pyplot as plt
+
+
+      plt.style.use('dark_background')
+
+      fig, ax = plt.subplots()
+
+      L = 6
+      x = np.linspace(0, L)
+      ncolors = len(plt.rcParams['axes.prop_cycle'])
+      shift = np.linspace(0, L, ncolors, endpoint=False)
+      for s in shift:
+          ax.plot(x, np.sin(x + s), 'o-')
+      ax.set_xlabel('x-axis')
+      ax.set_ylabel('y-axis')
+      ax.set_title("'dark_background' style sheet")
+
+      plt.savefig('img/plt/dark_test.png')
+    #+END_SRC
+
+    #+RESULTS:
+    [[file:]]
+
+    [[http://0--key.github.io/assets/img/plt/dark_test.png]]
    
     #+BEGIN_SRC python :results file :session perc
       import matplotlib.pyplot as plt
