--- a/2017-05-02-matplotlib-intro.org
+++ b/2017-05-02-matplotlib-intro.org
@@ -60,6 +60,24 @@ tags: [matplotlib]
    <class 'numpy.ndarray'>
 #+end_example
 
+** NdArray manipulations
+
+*** Directly
+    #+BEGIN_SRC python :results output :session perc :pp :eval noexport
+      for i in nen:
+          print(i[0], i[1], type(i[1]), '\n')
+    #+END_SRC
+
+    #+RESULTS:
+    : 
+    : ... -0.808571428571 0.837209302326 <class 'numpy.float64'> 
+    : 
+    : 0.357142857143 0.85049833887 <class 'numpy.float64'> 
+    : 
+    : -0.751428571429 -0.730897009967 <class 'numpy.float64'> 
+    : 
+    : -0.3 0.126245847176 <class 'numpy.float64'>
+
 ** Data visualization
 
 *** Simple
